fix menu overflow

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -15,8 +15,8 @@
 }
 
 #portrait {
-  max-width: 300px;
-  max-height: 300px;
+  max-width: 250px;
+  max-height: 250px;
   width: 100%;
   height: auto;
 }
