--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -57,8 +57,6 @@ html {
   color: var(--brown);
 
   scroll-behavior: smooth;
-
-  overflow-x: hidden;
 }
 
 .content * {
